--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 
 PORT=3000
-URL=mongodb+srv://UserMongo:a3zHk7EIWqzGziBj@cluster0.pouzu.mongodb.net/test 
+URL= mongodb+srv://UserMongo:a3zHk7EIWqzGziBj@cluster0.pouzu.mongodb.net/test 
+JWT_KEY= poYeijr4OwM@eER5488wdceO
