--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 
 PORT=3000
-URL= mongodb+srv://UserMongo:a3zHk7EIWqzGziBj@cluster0.pouzu.mongodb.net/test 
-JWT_KEY= poYeijr4OwM@eER5488wdceO
+URL=mongodb+srv://UserMongo:a3zHk7EIWqzGziBj@cluster0.pouzu.mongodb.net/test 
+JWT_KEY=poYeijr4OwM@eER5488wdceO
+GOOGLE_ID=1010257021365-r4d3jr9h3sjktr5659sl4ks8hoa3o7s7.apps.googleusercontent.com
+GOOGLE_SECRET=ZSh5B9Jh2wBrsls4l0ePI1Wp
